# enron_agent_course

./: .env.example  .gitignore  CONTEXT.md  PRD.md  pyproject.toml  tickets.md
docs/prd/: stage-2-eval-infrastructure-issues.md  stage-2-eval-infrastructure-prd.md
docs/research/: golden_set_count_aggregate_evidence_expectations.md  pydanticai_minimax_enron_integration.md  pydanticai_toolset_enron_challenge_coverage.md
docs/student/: stage-2-agent-protocol-and-eval.md
enron-reference-agent_20260709T004401Z/: results.json  results.md
enron_challenge/: __init__.py  cli.py  dataset.py  errors.py  models.py  protocol.py
enron_eval/: __init__.py  agent_cli.py  cli.py  dataset.py  env_loader.py  grader.py  judge.py  mail_index.py  models.py  results.py  runner.py  smoke.py
enron_reference/: __init__.py  agent.py  cli.py  indexer.py  prompt_runtime.py  tools.py
scripts/: minimax_smoke.sh
student_dataset/: DATASET_CONTRACT.md  NORMALIZATION.md  README.md
student_dataset/challenges/: challenges.json  challenges_easy.json  challenges_hard.json  challenges_medium.json
student_dataset/evidence/: evidence.jsonl  evidence_easy.jsonl  evidence_hard.jsonl  evidence_medium.jsonl
student_dataset/golden_answers/: golden_answers.json  golden_easy.json  golden_hard.json  golden_medium.json
student_dataset/golden_set/: golden_set.json
tests/: test_cli_adapter.py  test_env_loader.py  test_eval_failures.py  test_eval_runner.py  test_eval_selectors.py  test_grader.py  test_judge.py  test_reference_index.py  test_reference_prompt.py  test_reference_tools.py
(+18 files in other folders)
