[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enron-challenge"
version = "0.1.0"
description = "Beginner Enron Agent Challenge dataset and grading tools"
readme = "PRD.md"
requires-python = ">=3.10"
dependencies = ["PyYAML>=6.0"]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[tool.setuptools.packages.find]
where = ["."]
include = ["enron_challenge*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
