[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[project]
name = "enron-challenge"
version = "0.1.0"
description = "Beginner Enron Agent Challenge dataset and grading tools"
readme = "PRD.md"
requires-python = ">=3.10"
dependencies = [
    "PyYAML>=6.0",
    "pydantic>=2.0",
    "pydantic-ai[openai]>=0.1.0",
]

[project.optional-dependencies]
dev = ["pytest>=7.0"]

[project.scripts]
enron-eval = "enron_eval.cli:main"
enron-reference = "enron_reference.cli:main"

[tool.setuptools.packages.find]
where = ["."]
include = ["enron_challenge*", "enron_eval*", "enron_reference*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["."]
